# storinator

./: Cargo.toml  README.md  store.json
docs/: README.md
src/: entity.rs  handlers.rs  main.rs  tcp.rs
src/api/: mod.rs  parser.rs  token.rs  verbs.rs
src/config/: mod.rs
src/configs/: mod.rs
src/db/: mod.rs  read.rs  write.rs
src/routes/: docs.rs  mod.rs
