[package]
name = "storinator"
version = "0.1.0"
authors = ["Alisamar Husain <zrthxn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
config = "0.10.0"
dotenv = "0.15.0"
eyre = "0.6.4"
color-eyre = "0.5"
tracing = "0.1.21"
tracing-subscriber = "0.2"